contour/kuard/kuard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kuard
  labels:
    app: kuard
  namespace: kuard-ns
spec:
  ingressClassName: contour
  rules:
  - host: contour.vmwaremarketplace.com
    http:
      paths:
      - backend:
          service:
            name: kuard
            port:
              number: 80
        path: /
        pathType: Prefix
